# Ovarian

./: .gitignore  Agent.md  README.md  app.py  pyproject.toml  requirements.txt
artifacts/demo/: playwright_smoke_result.json  playwright_validation_strict.json  playwright_validation_strict.md
artifacts/models/xgboost/: HORDM.json  HORDM.pkl  HORSM.meta.json  PORDM.json  PORDM.pkl  PORSM.pkl
docs/: architecture.md  file-guide.md  module-map.md
docs/notes/: NOTE.md
frontend/streamlit_app/: main.py
frontend/streamlit_app/components/: layout.py  metric_cards.py  result_panels.py
models/: HORDM.meta.json  HORSM.json  HORSM.pkl  PORDM.meta.json  PORSM.json  PORSM.meta.json
ovarian_prediction/: __init__.py  clinical_system.py  models.py  predict.py  preprocessing.py  train.py
ovarian_prediction/clinical/: __init__.py  decision_system.py  demo.py  reporting.py  rules.py  thresholds.py
ovarian_prediction/config/: __init__.py  constants.py  paths.py
ovarian_prediction/inference/: __init__.py  patient_adapter.py  predictor.py
ovarian_prediction/models/: __init__.py  metrics.py  system.py  xgboost_model.py
ovarian_prediction/preprocessing/: __init__.py  cleaners.py  encoders.py  feature_sets.py  imputers.py  loaders.py  pipeline.py  splitters.py  synthetic.py
ovarian_prediction/tests/: test_pipeline.py
ovarian_prediction/training/: __init__.py  cli.py  orchestrator.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_clinical_rules.py  test_inference_units.py  test_models_units.py  test_preprocessing_units.py  test_upload_parser.py
(+12 files in other folders)
